--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 <header class="header">
     <div class="container">
         <div class="header__top">
-            <div class="header__top__location">
-                <img src="img/icons/location.png" alt="">
-                <p>Москва, Советский пер., 10 стр. 5</p>
-            </div>
-            <div class="header__top__timework">
-                <img src="img/icons/time.png" alt="">
-                <p>Пн-Пт: 8:00-20:00</p>
+            <div class="wrap">
+                <div class="header__top__location">
+                    <img src="img/icons/location.png" alt="">
+                    <p>Москва, Советский пер., 10 стр. 5</p>
+                </div>
+                <div class="header__top__timework">
+                    <img src="img/icons/time.png" alt="">
+                    <p>Пн-Пт: 8:00-20:00</p>
+                </div>
             </div>
             <div class="header__top__nav">
                 <ul>
