--- a/app/html/header.html
+++ b/app/html/header.html
@@ -18,7 +18,7 @@
                     <li>/</li>
                     <li><a href="repairs.html">ремонт</a></li>
                     <li>/</li>
-                    <li><a href="#">отзывы</a></li>
+                    <li><a href="reviews.html">отзывы</a></li>
                     <li>/</li>
                     <li><a href="#">контакты</a></li>
                 </ul>
